# cling-singleton-bug

./: CMakeLists.txt  README.md
include/: singleton.hpp
src/: main.cpp
